fix: make component content non-selectable
It avoids selection change in contenteditable based editors when
interacting with autocomplete.

--- a/demo/autocomplete/style.css
+++ b/demo/autocomplete/style.css
@@ -10,6 +10,7 @@
     background: #fff;
     border: 1px solid #ccc;
     padding: 0.25em;
+    user-select: none;
 }
 
 .tw-autocomplete--loading::before {
