--- a/demo/common/menu.css
+++ b/demo/common/menu.css
@@ -16,6 +16,7 @@
 .menu__list--level2 {
     position: absolute;
     display: none;
+    z-index: 200;
 }
 
 .menu__list-item:hover > .menu__list--level2 {
